test/Fail/Issue4775.err
Issue4775.agda:16.16-24: error: [ShouldBeRecordPattern]
Expected record pattern
when checking that the pattern isSuc y2 has type IsSuc y1
